fix:v1 interface error url edit-list-admin